--- a/Metadata/Metadata.tex
+++ b/Metadata/Metadata.tex
@@ -42,7 +42,7 @@
 \Department{Department of Finance and Accounting}
 
 % Degree (Mandatory)
-\Degree{Master of Science in Finance}
+\Degree{M.Sc Finance}
 
 % Course (Optional)
 % \Course{Course Name}
