--- a/Thesis.cls
+++ b/Thesis.cls
@@ -122,6 +122,7 @@
 \RequirePackage{blindtext} % Generate placeholder text.
 \RequirePackage[english,calc,datesep={/}]{datetime2} % To get date and time
 \RequirePackage{titletoc}
+\RequirePackage{float}
 
 
 \tcbuselibrary{most} % Load most libraries from the tcolorbox package.
@@ -188,21 +189,21 @@
             \ifdefvoid{\@affiliation}{}{\color{white}\titlestyle\@affiliation}};
 
         %% Add the logo in the bottom left
-        \node[above right=10mm] at (current page.south west) {%
-            \includegraphics[width=0.35\linewidth]{Figures/logo-white.pdf}};
+        % \node[above right=10mm] at (current page.south west) {%
+        %     \includegraphics[scale=0.16]{Figures/logo-black}};
 
         %% Add the banner with the title, subtitle, subject and author(s)
         \node[below=2cm,fill=black!85,minimum width={\paperwidth},inner ysep=25pt,opacity=0.6,text opacity=1] at (current page.north) {%
             \begin{minipage}{0.9\paperwidth}
                 %% Format and add the title
-                \color{title}\raggedright\largetitlestyle\fontsize{50}{50}\selectfont%
+                \color{title}\raggedright\largetitlestyle\fontsize{33}{30}\selectfont%
                     \@title \\[0.5ex]
                 %% Format and add (optional) subtitle and subject
-                \color{white}\titlestyle\fontsize{22}{22}\selectfont%
+                \color{white}\titlestyle\fontsize{18}{18}\selectfont%
                     \ifdefvoid{\@subtitle}{}{\@subtitle \\[2.5ex]}%
                     \ifdefvoid{\@subject}{}{\@subject \\[0.5ex]}
                 %% Format and add author or table of authors
-                \largetitlestyle\fontsize{24}{24}\selectfont%
+                \largetitlestyle\fontsize{20}{20}\selectfont%
                     \ifdefvoid{\@covertable}{\@author}{\@covertable}
             \end{minipage}};
 
