--- a/Metadata/title-report.tex
+++ b/Metadata/title-report.tex
@@ -4,7 +4,7 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.25]{Figures/university_crest.png}
+    \includegraphics[scale=0.25]{Figures/logo/university_crest.png}
 \end{figure}
 
 \vfill
@@ -52,7 +52,7 @@ by
 %% Insert the TU Delft logo at the bottom of the page
 \begin{tikzpicture}[remember picture, overlay]
     \node[above=10mm] at (current page.south) {%
-        \includegraphics[scale=0.16]{Figures/logo-black}
+        \includegraphics[scale=0.16]{Figures/logo/logo-black}
     };
 \end{tikzpicture}
 
