--- a/Main.tex
+++ b/Main.tex
@@ -29,7 +29,7 @@
 \author{\GetFirstAuthor}
 \subject{\GetDegree} % Cover only
 \affiliation{\GetUniversity } % Cover only
-\coverimage{Figures/cover.jpg} % Aspect ratio of 2:3 (portrait) recommended
+\coverimage{Figures/covers/cover2.jpg} % Aspect ratio of 2:3 (portrait) recommended
 \definecolor{title}{HTML}{4884d6} % Color for cover title
 
 \makecover
@@ -80,6 +80,6 @@
 \input{Chapters/Annexes/00-AnnexA}
 
 %%% Back Page %%%
-\input{Matter/08-Back-Page}
+\backcover
 
 \end{document}
