--- a/Configurations/10-Macros.sty
+++ b/Configurations/10-Macros.sty
@@ -8,7 +8,7 @@
     \vspace*{\fill}
     \begin{center}
         {%
-            \textcolor{gray!50}{\textit{This page intentionally left blank.}}
+            \textcolor{gray!60}{\textit{This page has been intentionally left blank.}}
         }
     \end{center}
     \vspace*{\fill}
@@ -24,11 +24,7 @@
     \\[.55em]%
     \noindent #1%
 }
-\newcommand{\guiainfo}[1]{%
-    \textcolor{note}{\faInfoCircle\ \textbf{Orientação Para a Escrita}}%
-    \\[.55em]%
-    \noindent #1%
-}
+
 
 % Redefine the underline command.
 \setlength{\ULdepth}{1.8pt}\contourlength{1.3pt}
@@ -39,7 +35,6 @@
 
 % Abstract keywords.
 \NewDocumentCommand{\keywordsen}{m}{\vspace{.4cm}\noindent\textbf{Keywords:} #1}
-\NewDocumentCommand{\keywordspt}{m}{\vspace{.4cm}\noindent\textbf{Palavras-Chave:} #1}
 
 % Landscape mode - the proper way!
 \def\ifGm@preamble#1{\@firstofone}
