--- a/Configurations/01-Colors.sty
+++ b/Configurations/01-Colors.sty
@@ -4,7 +4,6 @@
 % Color used in the links
 \definecolor{maincolor}{HTML}{145DA0}
 \definecolor{section}{HTML}{073F93}
-\definecolor{subsection}{HTML}{4360BA}
 
 % Color used in the numeration of the chapter style 'classic'.
 \definecolor{chapternumbercolor}{HTML}{073F93}
@@ -21,5 +20,5 @@
 %% Table of Contents Color
 \renewcommand{\cftchapfont}{\hypersetup{linkcolor=black}}
 \renewcommand{\cftsecfont}{\hypersetup{linkcolor=section}}
-\renewcommand{\cftsubsecfont}{\hypersetup{linkcolor=subsection}}
+\renewcommand{\cftsubsecfont}{\hypersetup{linkcolor=maincolor}}
 
