--- a/Main.tex
+++ b/Main.tex
@@ -16,8 +16,8 @@
 
 %%% Loading of Glossary and Acronyms %%%
 \makeglossaries
-\loadglsentries{Matter/04-Glossary}
-\loadglsentries[\acronymtype]{Matter/05-Acronyms}
+\loadglsentries{Matter/Glossary}
+\loadglsentries[\acronymtype]{Matter/Acronyms}
 
 \begin{document}
 
@@ -34,13 +34,13 @@
 \makecover
 
 \input{Metadata/title-report}
-\include{Matter/02-Copyright}
+\include{Matter/Copyright}
 \MediaOptionLogicBlank    %% Intentional Blank Page
 
 %%% Roman Numeration %%%
 \pagenumbering{roman}
 
-\include{Matter/03-Acknowledgements}
+\include{Matter/Acknowledgements}
 \MediaOptionLogicBlank    %% Intentional Blank Page
 \include{Chapters/00-Abstract}
 \MediaOptionLogicBlank    %% Intentional Blank Page
@@ -68,13 +68,13 @@
 
 %%% Appendices: Work that *YOU* Developed %%%
 \appendix
-\input{Matter/06-Appendices}
+\input{Matter/Appendices}
 \MediaOptionLogicBlank    %% Intentional Blank Page
 \input{Chapters/Appendices/00-AppendixA}
 \input{Chapters/Appendices/01-AppendixB}
 
 %%% Annexes: Work that *YOU DID NOT* Develop %%%
-\input{Matter/07-Annexes}
+\input{Matter/Annexes}
 \MediaOptionLogicBlank    %% Intentional Blank Page
 \input{Chapters/Annexes/00-AnnexA}
 
