--- a/Metadata/title-report.tex
+++ b/Metadata/title-report.tex
@@ -37,6 +37,7 @@ by
 
 %% Print some more information at the bottom
 \begin{tabular}{ll}
+    Student ID: & 5716485 \\
     Instructor: & I. Surname \\
     Teaching Assistant: & I. Surname \\
     Project Duration: & 2025 - 2026 \\
