--- a/Metadata/title-report.tex
+++ b/Metadata/title-report.tex
@@ -51,10 +51,13 @@ by
 \end{center}
 
 %% Insert the TU Delft logo at the bottom of the page
-\begin{tikzpicture}[remember picture, overlay]
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}[remember picture, overlay]
     \node[above=10mm] at (current page.south) {%
-        \includegraphics[scale=0.15]{Figures/logo/logo-black}
+        \includegraphics[scale=0.04]{Figures/logo/warwick.jpg}
     };
 \end{tikzpicture}
+\end{figure}
 
 \end{titlepage}
