--- a/Main.tex
+++ b/Main.tex
@@ -34,6 +34,7 @@
 \makecover
 
 \input{Metadata/title-report}
+\include{Metadata/wbs-tilte}
 \include{Matter/Copyright}
 \MediaOptionLogicBlank    %% Intentional Blank Page
 
