--- a/Matter/Copyright.tex
+++ b/Matter/Copyright.tex
@@ -1,5 +1,7 @@
 \pagenumbering{gobble} % Prevent page numbering.
 
+\begin{titlepage}
+
 \vspace*{\fill}
 
 {%
@@ -21,3 +23,5 @@
 }
 
 \vspace*{\fill}
+
+\end{titlepage}
