--- a/Metadata/title-report.tex
+++ b/Metadata/title-report.tex
@@ -1,3 +1,6 @@
+
+\pagenumbering{gobble} % Prevent page numbering.
+
 \begin{titlepage}
 
 \begin{center}
@@ -37,7 +40,7 @@ by
 
 %% Print some more information at the bottom
 \begin{tabular}{ll}
-    Student ID: & 5716485 \\
+    Student ID: & \GetFirstAuthorNumber \\
     Instructor: & I. Surname \\
     Teaching Assistant: & I. Surname \\
     Project Duration: & 2025 - 2026 \\
