--- a/Thesis.cls
+++ b/Thesis.cls
@@ -124,6 +124,7 @@
 \RequirePackage{titletoc}
 \RequirePackage{float}
 \RequirePackage{hyperref}
+\RequirePackage{multirow}
 
 
 \tcbuselibrary{most} % Load most libraries from the tcolorbox package.
