--- a/Configurations/04-Headers.sty
+++ b/Configurations/04-Headers.sty
@@ -1,31 +1,71 @@
 %%% Header and Footer %%%
+
+% \usepackage{fancyhdr} % For custom headers and footers.
+% \usepackage[bottom,hang]{footmisc} % Align footnotes to the bottom.
+% \pagestyle{fancy} \fancyhf{} % Clear default header and footer style.
+% \renewcommand{\headrulewidth}{.3pt} % Set a thin line for the header rule.
+% \setlength{\footnotemargin}{6pt} % Set margin space for footnotes.
+
+% \renewcommand{\chaptermark}[1]{\markboth{\textit{\thechapter. #1}}{}}
+% \renewcommand{\sectionmark}[1]{\markright{\textit{\thesection. #1}}}
+
+% % Dynamic section or chapter name in the header.
+% \fancyhead[OLH]{\ifnum\value{section}=0\leftmark\else\rightmark\fi\vspace{3pt}}
+% \fancyhead[ERH]{\leftmark\vspace{3pt}}
+% \fancyhead[ORH,ELH]{\thepage\vspace{3pt}}
+
+% % Style for plain pages (e.g., chapter starting pages).
+% \fancypagestyle{plain}{%
+%     \fancyhf{} % Clear header and footer.
+%     \renewcommand{\headrulewidth}{0pt} % Remove header rule.
+%     \fancyfoot[ORF,ELF]{\thepage\vspace{3pt}} % Place page number at the bottom.
+
+%     % Add the document version to the footer of the document.
+%     \ifthenelse{\equal{\DocStageOption}{working}}{
+%         \fancyfoot[OCF,ECF]{\small\GetDocumentVersion~-~\textit{\today}}
+%     }{}
+% }
+
+% % Add the document version to the footer of the document.
+% \ifthenelse{\equal{\DocStageOption}{working}}{%
+%     \fancyfoot[OCF,ECF]{\small\GetDocumentVersion~-~\textit{\today}}%
+% }{}
+
 \usepackage{fancyhdr} % For custom headers and footers.
 \usepackage[bottom,hang]{footmisc} % Align footnotes to the bottom.
-\pagestyle{fancy} \fancyhf{} % Clear default header and footer style.
+
+\pagestyle{fancy}
+\fancyhf{} % Clear default header and footer style.
 \renewcommand{\headrulewidth}{.3pt} % Set a thin line for the header rule.
 \setlength{\footnotemargin}{6pt} % Set margin space for footnotes.
 
 \renewcommand{\chaptermark}[1]{\markboth{\textit{\thechapter. #1}}{}}
 \renewcommand{\sectionmark}[1]{\markright{\textit{\thesection. #1}}}
 
-% Dynamic section or chapter name in the header.
-\fancyhead[OLH]{\ifnum\value{section}=0\leftmark\else\rightmark\fi\vspace{3pt}}
-\fancyhead[ERH]{\leftmark\vspace{3pt}}
-\fancyhead[ORH,ELH]{\thepage\vspace{3pt}}
+% Header layout:
+% Inner side -> Author number
+% Center     -> Section/chapter name
+% Outer side -> Page number
+\fancyhead[OLH]{\textit{ID:\GetFirstAuthorNumber}\vspace{3pt}}       % Odd left header (inner)
+\fancyhead[ERH]{\textit{ID:\GetFirstAuthorNumber}\vspace{3pt}}       % Even right header (inner)
+\fancyhead[C]{\ifnum\value{section}=0\leftmark\else\rightmark\fi\vspace{3pt}} % Center header
+\fancyhead[ORH]{\thepage\vspace{3pt}}                              % Odd right header (outer)
+\fancyhead[ELH]{\thepage\vspace{3pt}}                              % Even left header (outer)
 
 % Style for plain pages (e.g., chapter starting pages).
 \fancypagestyle{plain}{%
     \fancyhf{} % Clear header and footer.
     \renewcommand{\headrulewidth}{0pt} % Remove header rule.
-    \fancyfoot[ORF,ELF]{\thepage\vspace{3pt}} % Place page number at the bottom.
+    \fancyfoot[ORF,ELF]{\thepage\vspace{3pt}} % Page number bottom outside.
 
-    % Add the document version to the footer of the document.
+    % Add document version to footer for working stage.
     \ifthenelse{\equal{\DocStageOption}{working}}{
         \fancyfoot[OCF,ECF]{\small\GetDocumentVersion~-~\textit{\today}}
     }{}
 }
 
-% Add the document version to the footer of the document.
+% Document version in footer for working stage (all pages).
 \ifthenelse{\equal{\DocStageOption}{working}}{%
     \fancyfoot[OCF,ECF]{\small\GetDocumentVersion~-~\textit{\today}}%
 }{}
+
