--- a/Matter/Copyright.tex
+++ b/Matter/Copyright.tex
@@ -17,9 +17,9 @@
     
     \noindent\psvectorian[scale=.35,opacity=.80]{87}
     
-    % \vspace{.935em}
+    \vspace{.935em}
 
-    % \noindent Preparation of this work was facilitated by the use of the \textit{IPLeiria-Thesis} template.
+    \noindent The cover image was taken from Unsplash Wallpapers and is free of copyright.
 }
 
 \vspace*{\fill}
