--- a/Metadata/Metadata.tex
+++ b/Metadata/Metadata.tex
@@ -39,10 +39,10 @@
 \School{Warwick Business School}
 
 % Department (Mandatory)
-\Department{Department of Finance and Accounting}
+\Department{Department of Mathematics and Economics}
 
 % Degree (Mandatory)
-\Degree{M.Sc Finance}
+\Degree{M.Sc Mathematical Finance}
 
 % Course (Optional)
 % \Course{Course Name}
