--- a/Metadata/title-report.tex
+++ b/Metadata/title-report.tex
@@ -44,7 +44,7 @@ by
     Instructor: & I. Surname \\
     Teaching Assistant: & I. Surname \\
     Project Duration: & 2025 - 2026 \\
-    Faculty: & Faculty of Accounting and Finance, Warwick Business School
+    Faculty: & Faculty of Mathematics, Statistics and Finance
 \end{tabular}
 
 \bigskip
