--- a/Main.tex
+++ b/Main.tex
@@ -1,11 +1,9 @@
 
 %%% Document Options %%%
 \documentclass[
-    school=estg,
     docstage=working,
     media=paper,
-    chapterstyle=classic,
-    coverstyle=classic
+    chapterstyle=classic
 ]{Thesis}
 
 %%% Document Version %%%
