--- a/Main.tex
+++ b/Main.tex
@@ -34,15 +34,15 @@
 \input{Metadata/title-report}
 \include{Metadata/wbs-tilte}
 \include{Matter/Copyright}
-\MediaOptionLogicBlank    %% Intentional Blank Page
+\IntentionalBlankPage   %% Intentional Blank Page
 
 %%% Roman Numeration %%%
 \pagenumbering{roman}
 
 \include{Matter/Acknowledgements}
-\MediaOptionLogicBlank    %% Intentional Blank Page
+\IntentionalBlankPage    %% Intentional Blank Page
 \include{Chapters/00-Abstract}
-\MediaOptionLogicBlank    %% Intentional Blank Page
+\IntentionalBlankPage    %% Intentional Blank Page
 
 %%% Table of Contents, List of Figures and List of Tables %%%
 \bookmarktocentry\tableofcontents
@@ -68,13 +68,13 @@
 %%% Appendices: Work that *YOU* Developed %%%
 \appendix
 \input{Matter/Appendices}
-\MediaOptionLogicBlank    %% Intentional Blank Page
+\IntentionalBlankPage   %% Intentional Blank Page
 \input{Chapters/Appendices/00-AppendixA}
 \input{Chapters/Appendices/01-AppendixB}
 
 %%% Annexes: Work that *YOU DID NOT* Develop %%%
 \input{Matter/Annexes}
-\MediaOptionLogicBlank    %% Intentional Blank Page
+\IntentionalBlankPage   %% Intentional Blank Page
 \input{Chapters/Annexes/00-AnnexA}
 
 %%% Back Page %%%
