--- a/Configurations/10-Macros.sty
+++ b/Configurations/10-Macros.sty
@@ -88,7 +88,7 @@
     \ifthenelse{\equal{\MediaOption}{paper}}{\plainblankpage}{\clearpage\thispagestyle{plain}}%
 }
 
-\newcommand{\MediaOptionLogicBlank}{%
+\newcommand{\IntentionalBlankPage}{%
     \ifthenelse{\equal{\MediaOption}{paper}}{\blankpage}{}%
 }
 
