--- a/Metadata/title-report.tex
+++ b/Metadata/title-report.tex
@@ -53,7 +53,7 @@ by
 
 \end{center}
 
-%% Insert the TU Delft logo at the bottom of the page
+%% Insert the Warwick logo at the bottom of the page
 \begin{figure}[H]
     \centering
     \begin{tikzpicture}[remember picture, overlay]
