--- a/Main.tex
+++ b/Main.tex
@@ -2,8 +2,7 @@
 %%% Document Options %%%
 \documentclass[
     docstage=working,
-    media=paper,
-    chapterstyle=classic
+    media=paper
 ]{Thesis}
 
 %%% Document Version %%%
