--- a/Bibliography/Bibliography.bib
+++ b/Bibliography/Bibliography.bib
@@ -1,5 +1,19 @@
 % Recommended: Use JabRef as your reference manager.
 
+
+@Article{Takahashi2019,
+  author    = {Takahashi, Shuntaro and Chen, Yu and Tanaka-Ishii, Kumiko},
+  journal   = {Physica A: Statistical Mechanics and its Applications},
+  title     = {Modeling financial time-series with generative adversarial networks},
+  year      = {2019},
+  issn      = {0378-4371},
+  month     = aug,
+  pages     = {121261},
+  volume    = {527},
+  doi       = {10.1016/j.physa.2019.121261},
+  publisher = {Elsevier BV},
+}
+
 @Article{Elgamal1985,
     author   = {Elgamal, T.},
     journal  = {IEEE Transactions on Information Theory},
@@ -12,12 +26,4 @@
     volume   = {31},
     doi      = {10.1109/TIT.1985.1057074},
     url      = {https://ieeexplore.ieee.org/document/1057074},
-}
-
-@Misc{IPLeiriaThesis,
-    author   = {{José Areia}},
-    title    = {Polytechnic University of Leiria: LaTeX Thesis Template},
-    year     = {2023},
-    month    = dec,
-    url      = {https://github.com/joseareia/ipleiria-thesis},
 }
