--- a/Configurations/01-Colors.sty
+++ b/Configurations/01-Colors.sty
@@ -11,6 +11,8 @@
 % Color used in the typesetting of the front page.
 \definecolor{frontpagedark}{HTML}{1c1c1c}
 
+\definecolor{headertext}{HTML}{666666}
+
 % Colors used in the custom block environment.
 \definecolor{note}{HTML}{0969da}
 \definecolor{tip}{HTML}{1a7f37}
