--- a/Main.tex
+++ b/Main.tex
@@ -25,7 +25,7 @@
 \author{\GetFirstAuthor}
 \subject{\GetDegree} % Cover only
 \affiliation{\GetUniversity } % Cover only
-\coverimage{Figures/covers/cover.jpg} % Aspect ratio of 2:3 (portrait) recommended
+\coverimage{Figures/covers/cover3.jpg} % Aspect ratio of 2:3 (portrait) recommended
 \definecolor{title}{HTML}{4884d6} % Color for cover title
 
 \makecover
