--- a/Metadata/title-report.tex
+++ b/Metadata/title-report.tex
@@ -121,7 +121,7 @@ by
     Student ID: & \GetFirstAuthorNumber \\
     Instructor: & I. Surname \\
     Teaching Assistant: & I. Surname \\
-    Project Duration: & 2025 -- 2026 \\
+    Thesis Duration: & 2025 -- 2026 \\
     Faculty: & Faculty of Mathematics, Statistics and Finance
 \end{tabular}
 \end{minipage}
