--- a/Configurations/Code.sty
+++ b/Configurations/Code.sty
@@ -1,4 +1,4 @@
-%%% Code Highlighting %%%
+%% Code Highlighting %%
 \newenvironment{code}{\captionsetup{type=listing}}{}
 {%
     \SetupFloatingEnvironment{listing}{name=Listing,within=none}
