--- a/Configurations/Glossary.sty
+++ b/Configurations/Glossary.sty
@@ -1,4 +1,4 @@
-%%% Glossary and Acronyms %%%
+%% Glossary and Acronyms %%
 \setglossarystyle{long} % Glossary style.
 \setlength\LTleft{-6pt} % Left margin.
 \setlength\LTright{0pt} % Right margin.
