--- a/Configurations/Headers.sty
+++ b/Configurations/Headers.sty
@@ -1,4 +1,4 @@
-%%% Header and Footer %%%
+%% Header and Footer %%
 
 \usepackage{fancyhdr} % For custom headers and footers.
 \usepackage[bottom,hang]{footmisc} % Align footnotes to the bottom.
