--- a/Configurations/Tables.sty
+++ b/Configurations/Tables.sty
@@ -1,4 +1,4 @@
-%%% Tables %%%
+%% Tables %%
 \newcommand{\customtableformatting}{\renewcommand{\arraystretch}{1.1}\small}
 \AtBeginEnvironment{tabular}{\customtableformatting} % Apply to tabular.
 \AtBeginEnvironment{tabularx}{\customtableformatting} % Apply to tabularx.
