--- a/Configurations/Macros.sty
+++ b/Configurations/Macros.sty
@@ -1,4 +1,4 @@
-%%% Document Macros and Extras %%%
+%% Document Macros and Extras %%
 
 % Blank page with a warning indicating it is intentionally left blank.
 \newcommand\blankpage{
