--- a/Matter/Annexes.tex
+++ b/Matter/Annexes.tex
@@ -6,10 +6,8 @@
 \MediaOptionLogicAnnexes
 \begin{center}
     \crimsonfont
-    \thispagestyle{empty}
-        
-    \vspace*{\fill}
-    {%
+    \thispagestyle{empty}    
+    \vspace*{\fill}{
         {\LARGE\fontsize{26}{26}\selectfont\textcolor{maincolor}{Annexes}\par}
     }
     \vspace*{\fill}
