--- a/Configurations/Colors.sty
+++ b/Configurations/Colors.sty
@@ -1,9 +1,11 @@
-%% Document Colors %%
+%% Document Colors
 \usepackage{tocloft}
 
 % Color used in the links
 \definecolor{maincolor}{HTML}{145DA0}
-\definecolor{section}{HTML}{073F93}
+\definecolor{section}{HTML}{0d47a1}
+\definecolor{reflinkcolor}{HTML}{1565c0}
+
 
 % Color used in the numeration of the chapter style 'classic'.
 \definecolor{chapternumbercolor}{HTML}{073F93}
@@ -22,5 +24,5 @@
 %% Table of Contents Color
 \renewcommand{\cftchapfont}{\hypersetup{linkcolor=black}}
 \renewcommand{\cftsecfont}{\hypersetup{linkcolor=section}}
-\renewcommand{\cftsubsecfont}{\hypersetup{linkcolor=maincolor}}
+\renewcommand{\cftsubsecfont}{\hypersetup{linkcolor=reflinkcolor}}
 
