--- a/Configurations/Fonts.sty
+++ b/Configurations/Fonts.sty
@@ -1,4 +1,4 @@
-%% Fonts %%
+%% Fonts
 \usepackage[T1]{fontenc} % Font encoding for extended character sets.
 \usepackage{newpxmath} % Use PX fonts for math (alternative to standard fonts).
 \usepackage{fvextra} % Enhanced customisation of verbatim environments.
