--- a/Configurations/Margins.sty
+++ b/Configurations/Margins.sty
@@ -1,6 +1,6 @@
-%% Margins %%
+%% Margins
 \usepackage[
-	top=2.5cm, % Set top margin.
+	top=1.5cm, % Set top margin.
 	bottom=2.5cm, % Set bottom margin.
 	left=2cm, % Set left margin.
 	right=2cm, % Set right margin.
