--- a/Configurations/Metadata.sty
+++ b/Configurations/Metadata.sty
@@ -1,4 +1,4 @@
-%% Document Settings %%
+%% Document Settings
 \NewDocumentCommand{\FirstAuthor}{m}{\newcommand{\GetFirstAuthor}{#1}}
 \NewDocumentCommand{\FirstAuthorNumber}{m}{\newcommand{\GetFirstAuthorNumber}{#1}}
 
