--- a/Configurations/Chapters.sty
+++ b/Configurations/Chapters.sty
@@ -1,7 +1,7 @@
-%% Chapters and Sections %%
+%% Chapters and Sections
 
 %% Classic 
-\titleformat{\chapter}[display]%
+\titleformat{\chapter}[display]
 {\raggedleft\huge}%
 {\raggedleft\fontsize{84}{10}\bfseries{\color{chapternumbercolor}{\thechapter}}}%
 {0pt}%
