--- a/Configurations/Contents.sty
+++ b/Configurations/Contents.sty
@@ -1,4 +1,4 @@
-%% Custom ToC Entries %%
+%% Custom ToC Entries
 
 \newcommand{\bookmarktocentry}{\pdfbookmark[0]{\contentsname}{toc}}
 \ProvideDocumentCommand\MakeLinkTarget{sO{}m}{}
