--- a/Configurations/Headers.sty
+++ b/Configurations/Headers.sty
@@ -1,12 +1,12 @@
-%% Header and Footer %%
+%% Header and Footer
 
 \usepackage{fancyhdr} % For custom headers and footers.
 \usepackage[bottom,hang]{footmisc} % Align footnotes to the bottom.
 
 \pagestyle{fancy}
 \fancyhf{} % Clear default header and footer style.
-% \renewcommand{\headrulewidth}{.3pt} % Set a thin line for the header rule.
-% \setlength{\footnotemargin}{6pt} % Set margin space for footnotes.
+\renewcommand{\headrulewidth}{.3pt} % Set a thin line for the header rule.
+\setlength{\footnotemargin}{6pt} % Set margin space for footnotes.
 
 % \renewcommand{\chaptermark}[1]{\markboth{\textit{\thechapter. #1}}{}}
 % \renewcommand{\sectionmark}[1]{\markright{\textit{\thesection. #1}}}
@@ -21,8 +21,8 @@
 % \fancyhead[ORH]{\thepage\vspace{3pt}}     % Odd right header (outer)
 % \fancyhead[ELH]{\thepage\vspace{3pt}}     % Even left header (outer)
 
-% % Style for plain pages (e.g., chapter starting pages).
-% \fancypagestyle{plain}{%
+% Style for plain pages (e.g., chapter starting pages).
+% \fancypagestyle{plain}{
 %     \fancyhf{} % Clear header and footer.
 %     \renewcommand{\headrulewidth}{0pt} % Remove header rule.
 %     \fancyfoot[ORF,ELF]{\thepage\vspace{3pt}} % Page number bottom outside.
@@ -33,10 +33,10 @@
 %     }{}
 % }
 
-% % Document version in footer for working stage (all pages).
-% \ifthenelse{\equal{\DocStageOption}{working}}{%
-%     \fancyfoot[OCF,ECF]{\small\GetDocumentVersion~-~\textit{\today}}%
-% }{}
+% Document version in footer for working stage in all pages
+\ifthenelse{\equal{\DocStageOption}{working}}{
+    \fancyfoot[L]{\small\GetDocumentVersion~-~\textit{\today}}%
+}{}
 
 
 % Store section title for use in footers
