--- a/Main.tex
+++ b/Main.tex
@@ -69,12 +69,13 @@
 \input{Chapters/Appendices/00-AppendixA}
 \input{Chapters/Appendices/01-AppendixB}
 
+% \imagepage{Figures/covers/cover4.jpg}
 %% Annexes: Work that *YOU DID NOT* Develop
 \input{Matter/Annexes}
 \IntentionalBlankPage   %% Intentional Blank Page
 \input{Chapters/Annexes/00-AnnexA}
 
 %% Back Page
-\imagecover{Figures/covers/cover4.jpg}
+\backcover
 
 \end{document}
