--- a/Matter/Copyright.tex
+++ b/Matter/Copyright.tex
@@ -11,8 +11,8 @@
     
     \vspace{2.4em}
     \noindent\psvectorian[scale=.35,opacity=.80]{87}
-    \vspace{.935em}
-    \noindent The cover image was taken from Unsplash Wallpapers and is free of copyright.
+    \vspace{0.45em}
+    \paragraph{}\noindent The cover image was taken from Unsplash Wallpapers and is free of copyright.
 }
 \vspace*{\fill}
 \end{titlepage}
